--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,19 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Configuration Environments
+config/*
+!config/sample-env.json
+!config/sample-local.json
+
+# DICOM Images Information
+src/common/studies/*
+src/common/studyList.json
+!src/common/studies/.gitkeep
+
+# Dataset Information
+dataset/*
+
+# Findings Information
+src/common/findings/*
