--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build:local": "webpack -p &",
     "build:multi": "webpack -p &",
     "build:uta11": "webpack --mode production --env production &",
+    "build:eia": "webpack --mode production --env production &",
     "create:sl": "touch src/common/studyList.json",
     "clean:dataset": "rimraf dataset/*",
     "clean:studies": "rimraf src/common/studies/*",
@@ -38,10 +39,11 @@
     "start:local": "npm run build:local && npm run server && start:webdash",
     "start:multi": "npm run build:multi && npm run server && start:webdash",
     "start:uta11": "npm run build:uta11 && npm run server && start:webdash",
+    "start:eia": "npm run build:eia && npm run server && start:webdash",
     "start": "npm run server"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "babel-core": "^4.7.16",
     "babel-loader": "^8.2.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -57,7 +59,7 @@
     "html-webpack-plugin": "^1.1.0",
     "jest": "^27.2.4",
     "jshint": "^2.6.3",
-    "jshint-loader": "^0.8.4",
+    "jshint-loader": "^0.7.0",
     "load-grunt-tasks": "^3.5.2",
     "node-libs-browser": "^2.2.0",
     "rimraf": "^2.6.3",
